--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "pure",
-  "version": "0.2.1-pre",
-  "devDependencies": {
-    "normalize-css": "1.x"
+  "name": "base",
+  "version": "0.0.1",
+  "dependencies": {
+    "normalize-css": "~2.1.2"
   }
 }
